Add tests to notebook

--- a/main.ipynb
+++ b/main.ipynb
@@ -193,6 +193,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Constants\n",
+    "from benchmark.statisticsproducer import draw_plot\n",
+    "from benchmark.resultsproducer import produce_results\n",
+    "from network.graphtype import GraphType\n",
+    "from benchmark.statisticsproducer import calculate_points\n",
+    "\n",
+    "INITIAL_VALUE = 10\n",
+    "FANOUT = 1\n",
+    "NO_NEWS = 5\n",
+    "ERROR_PERCENTAGE = 0\n",
+    "TRIES = 5"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "pycharm": {
@@ -211,30 +235,21 @@
     }
    ],
    "source": [
-    "# Results & Points\n",
+    "# Choose Topology\n",
     "\n",
-    "from benchmark.resultsproducer import produce_results\n",
-    "from network.graphtype import GraphType\n",
-    "from benchmark.statisticsproducer import calculate_points\n",
-    "\n",
-    "INITIAL_VALUE = 10\n",
-    "FANOUT = 3\n",
-    "NO_NEWS = 5\n",
-    "ERROR_PERCENTAGE = 0\n",
-    "TRIES = 10\n",
-    "VERTICES = 128\n",
-    "\n",
-    "durations, messages = produce_results(GraphType.ERDOS_RENYI, INITIAL_VALUE, FANOUT, NO_NEWS, ERROR_PERCENTAGE, TRIES, VERTICES)\n",
+    "durations, messages = produce_results(GraphType.ERDOS_RENYI, INITIAL_VALUE, FANOUT, NO_NEWS, ERROR_PERCENTAGE, TRIES)\n",
     "erdos = calculate_points(durations) + calculate_points(messages)\n",
     "print(erdos)\n",
     "\n",
-    "durations, messages = produce_results(GraphType.BARABASI_ALBERT, INITIAL_VALUE, FANOUT, NO_NEWS, ERROR_PERCENTAGE, TRIES, VERTICES)\n",
+    "durations, messages = produce_results(GraphType.BARABASI_ALBERT, INITIAL_VALUE, FANOUT, NO_NEWS, ERROR_PERCENTAGE, TRIES)\n",
     "barabasi = calculate_points(durations) + calculate_points(messages)\n",
     "print(barabasi)\n",
     "\n",
-    "durations, messages = produce_results(GraphType.WATTS_STROGATZ, INITIAL_VALUE, FANOUT, NO_NEWS, ERROR_PERCENTAGE, TRIES, VERTICES)\n",
+    "durations, messages = produce_results(GraphType.WATTS_STROGATZ, INITIAL_VALUE, FANOUT, NO_NEWS, ERROR_PERCENTAGE, TRIES)\n",
     "watts = calculate_points(durations) + calculate_points(messages)\n",
-    "print(watts)"
+    "print(watts)\n",
+    "\n",
+    "draw_plot((\"Erdos-Renyi\", erdos), (\"Barabasi-Albert\", barabasi), (\"Watts-Strogatz\", watts))"
    ]
   },
   {
@@ -253,11 +268,115 @@
     }
    ],
    "source": [
-    "# Graphics\n",
+    "# Choose Fanout\n",
     "\n",
-    "from benchmark.statisticsproducer import draw_plot\n",
+    "# TOPOLOGY = CHOOSE THE WINNER\n",
     "\n",
-    "draw_plot(erdos, barabasi, watts)"
+    "durations, messages = produce_results(TOPOLOGY, INITIAL_VALUE, 1, NO_NEWS, ERROR_PERCENTAGE, TRIES)\n",
+    "one = calculate_points(durations) + calculate_points(messages)\n",
+    "print(one)\n",
+    "\n",
+    "durations, messages = produce_results(TOPOLOGY, INITIAL_VALUE, 2, NO_NEWS, ERROR_PERCENTAGE, TRIES)\n",
+    "two = calculate_points(durations) + calculate_points(messages)\n",
+    "print(two)\n",
+    "\n",
+    "durations, messages = produce_results(TOPOLOGY, INITIAL_VALUE, 3, NO_NEWS, ERROR_PERCENTAGE, TRIES)\n",
+    "three = calculate_points(durations) + calculate_points(messages)\n",
+    "print(three)\n",
+    "\n",
+    "durations, messages = produce_results(TOPOLOGY, INITIAL_VALUE, 4, NO_NEWS, ERROR_PERCENTAGE, TRIES)\n",
+    "four = calculate_points(durations) + calculate_points(messages)\n",
+    "print(four)\n",
+    "\n",
+    "durations, messages = produce_results(TOPOLOGY, INITIAL_VALUE, 5, NO_NEWS, ERROR_PERCENTAGE, TRIES)\n",
+    "five = calculate_points(durations) + calculate_points(messages)\n",
+    "print(five)\n",
+    "\n",
+    "draw_plot((\"1\", one), (\"2\", two), (\"3\", three), (\"4\", four), (\"5\", five))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Choose Error Percentage\n",
+    "\n",
+    "# FANOUT = CHOOSEN FANOUT\n",
+    "\n",
+    "durations, messages = produce_results(TOPOLOGY, INITIAL_VALUE, FANOUT, NO_NEWS, 0, TRIES)\n",
+    "zero = calculate_points(durations) + calculate_points(messages)\n",
+    "print(zero)\n",
+    "\n",
+    "durations, messages = produce_results(TOPOLOGY, INITIAL_VALUE, FANOUT, NO_NEWS, 0.02, TRIES)\n",
+    "point2 = calculate_points(durations) + calculate_points(messages)\n",
+    "print(point2)\n",
+    "\n",
+    "durations, messages = produce_results(TOPOLOGY, INITIAL_VALUE, FANOUT, NO_NEWS, 0.04, TRIES)\n",
+    "point4 = calculate_points(durations) + calculate_points(messages)\n",
+    "print(point4)\n",
+    "\n",
+    "durations, messages = produce_results(TOPOLOGY, INITIAL_VALUE, FANOUT, NO_NEWS, 0.06, TRIES)\n",
+    "point6 = calculate_points(durations) + calculate_points(messages)\n",
+    "print(point6)\n",
+    "\n",
+    "durations, messages = produce_results(TOPOLOGY, INITIAL_VALUE, FANOUT, NO_NEWS, 0.08, TRIES)\n",
+    "point8 = calculate_points(durations) + calculate_points(messages)\n",
+    "print(point8)\n",
+    "\n",
+    "durations, messages = produce_results(TOPOLOGY, INITIAL_VALUE, FANOUT, NO_NEWS, 0.1, TRIES)\n",
+    "ten = calculate_points(durations) + calculate_points(messages)\n",
+    "print(ten)\n",
+    "\n",
+    "draw_plot((\"0\", zero), (\"0.2\", point2), (\"0.4\", point4), (\"0.6\", point6), (\"0.8\", point8), (\"0.1\", ten))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Choose No News\n",
+    "\n",
+    "# ERROR_PERCENTAGE = CHOOSEN PERCENTAGE\n",
+    "\n",
+    "durations, messages = produce_results(TOPOLOGY, INITIAL_VALUE, FANOUT, 5, ERROR_PERCENTAGE, TRIES)\n",
+    "five = calculate_points(durations) + calculate_points(messages)\n",
+    "print(five)\n",
+    "\n",
+    "durations, messages = produce_results(TOPOLOGY, INITIAL_VALUE, FANOUT, 6, ERROR_PERCENTAGE, TRIES)\n",
+    "six = calculate_points(durations) + calculate_points(messages)\n",
+    "print(six)\n",
+    "\n",
+    "durations, messages = produce_results(TOPOLOGY, INITIAL_VALUE, FANOUT, 7, ERROR_PERCENTAGE, TRIES)\n",
+    "seven = calculate_points(durations) + calculate_points(messages)\n",
+    "print(seven)\n",
+    "\n",
+    "durations, messages = produce_results(TOPOLOGY, INITIAL_VALUE, FANOUT, 8, ERROR_PERCENTAGE, TRIES)\n",
+    "eight = calculate_points(durations) + calculate_points(messages)\n",
+    "print(eight)\n",
+    "\n",
+    "durations, messages = produce_results(TOPOLOGY, INITIAL_VALUE, FANOUT, 9, ERROR_PERCENTAGE, TRIES)\n",
+    "nine = calculate_points(durations) + calculate_points(messages)\n",
+    "print(nine)\n",
+    "\n",
+    "durations, messages = produce_results(TOPOLOGY, INITIAL_VALUE, FANOUT, 10, ERROR_PERCENTAGE, TRIES)\n",
+    "ten = calculate_points(durations) + calculate_points(messages)\n",
+    "print(ten)\n",
+    "\n",
+    "draw_plot((\"5\", five), (\"6\", six), (\"7\", seven), (\"8\", eight), (\"9\", nine), (\"10\", ten))\n"
    ],
    "metadata": {
     "collapsed": false,
